samples/_failures_safe/1761457871_2e61cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_522ed298.c: In function ‘main’:
./samples/SAFE/__tmp_522ed298.c:161:9: error: expected declaration or statement at end of input
  161 |         }
      |         ^
./samples/SAFE/__tmp_522ed298.c:161:9: error: expected declaration or statement at end of input
